# chronos_x

./: .gitignore  README.md  pyproject.toml  test_system.py
chronos_x/data/ingestion/: binance_stream.py  clickhouse_client.py  coinapi_client.py  historical_loader.py  sentiment_collector.py  tardis_loader.py
chronos_x/data/processing/: frac_diff.py  labeling.py  microstructure.py
chronos_x/models/agents/: meta_labeler.py  regime_detector.py  sentiment_analyzer.py
chronos_x/models/mamba/: block.py  crypto_mamba.py
chronos_x/models/training/: objectives.py  trainer.py
chronos_x/production/: __init__.py  live_trader.py  monitoring.py
chronos_x/scripts/: ingest_data.py  run_backtest.py  train_model.py
chronos_x/strategy/: execution.py  risk.py  signal_generator.py
chronos_x/validation/: cpcv.py  metrics.py
config/: config.yaml
config/backtest/: fees_slippage.yaml
config/data/: binance.yaml  coinapi.yaml  sentiment_sources.yaml  tardis.yaml
config/model/: mamba_default.yaml
config/sweep/: optimizing_dsr.yaml
data/schema/: market_trades.sql
docker/: docker-compose.yml
docs/: DEVELOPMENT_PLAN.md
